# lolicon-web

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yaml  config.toml  pyproject.toml  requirements.txt
.chglog/: config.yml
config/: config.toml
lolicon_web/: app.py  route.py
